<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">textura</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_new_task">NewTask</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_task_complete">TaskComplete</string>
    <string name="blank_list">Tap to add new task...</string>
    <string name="task_list">Task List</string>
    <string name="new_task_header">New Task</string>
    <string name="hint_task_name">Task Name</string>
    <string name="hint_task_details">Task Details</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="hint_hour">24</string>
    <string name="hint_minute">00</string>
    <string name="colon">:</string>
    <string name="eventtype_title">Group：</string>
    <string name="event_type_prompt">Please select the a group</string>
    <string name="timecount_title">Complete At: </string>
    <string name="rating_title">Priority：</string>
    <string name="title_activity_db">MainActivity</string>

</resources>